syntax = "proto3";

package authpb;

option go_package = "/authpb";

// AuthService - сервис для проверки токенов
service AuthService {
  rpc VerifyToken(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
  uint32 user_id = 1;
  string token = 2;
}

message AuthResponse {
  bool valid = 1;
  string email = 2;
}
